# ya-lang

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
core/: op_prec.txt
core/examples/: hello_world.ya
core/lexer/: Cargo.toml
core/lexer/src/: error.rs  lib.rs  tests.rs
core/sem-parser/: Cargo.toml
core/sem-parser/src/: lib.rs
core/syn-parser/: Cargo.toml
core/syn-parser/src/: error.rs  expr.rs  fn_decl.rs  let_decl.rs  lib.rs  param_decl.rs  repeats.rs  rule.rs  stack_item.rs  stmt.rs  tests.rs  ty.rs
core/syn_parser/: Cargo.toml
core/syn_parser/src/: error.rs  expr.rs  lib.rs  rule.rs  stack_item.rs  stmts.rs  tests.rs
core/token/src/: lib.rs
core/ya_core/: Cargo.toml
core/ya_core/src/: lib.rs
core/ya_interpreter/: Cargo.toml
core/ya_interpreter/src/: lib.rs
core/ya_lexer/: Cargo.toml
core/ya_lexer/src/: lib.rs
core/ya_prim_types/: Cargo.toml
core/ya_prim_types/src/: lib.rs
core/ya_sem/: Cargo.toml
core/ya_sem/src/: env.rs  expr.rs  lib.rs  tests.rs
core/ya_syn/: Cargo.toml
core/ya_syn/src/: construct.rs  expr.rs  item.rs  lib.rs  tests.rs  token.rs
examples/: hello_world.ya
src/: main.rs
ya_core/: Cargo.toml
ya_core/examples/: hello_world.ya
ya_core/src/: lexer.rs  lexer_tests.rs  lib.rs  op_prec.txt  prim_type.rs
ya_core/src/lexer/: lexer.rs  mod.rs  tests.rs
ya_core/src/parser/: construct.rs  expr.rs  item.rs  mod.rs  stmt.rs  tests.rs  token.rs
ya_core/src/semantic_parser/: env.rs  expr.rs  item.rs  mod.rs  tests.rs
ya_core/src/syntax_parser/: construct.rs  expr.rs  item.rs  mod.rs  tests.rs  (+1 more)
