[package]
name = "ya_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./core/ya_core",
    "./core/ya_lexer",
    "./core/ya_syn",
    "./core/ya_sem",
]

[dependencies]
ya_core = { path = "./core/ya_core" }