[package]
name = "ya-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./core/token",
    "./core/lexer",
    "./core/syn_parser",
]

[dependencies]
syn_parser = { path = "./core/syn_parser" }
