[package]
name = "ya_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya_lexer = { path = "../ya_lexer" }
ya_syn = { path = "../ya_syn" }
ya_sem = { path = "../ya_sem" }
ya_prim_types = { path = "../ya_prim_types" }
