[package]
name = "ya_sem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya_syn = { path = "../ya_syn" }
ya_prim_types = { path = "../ya_prim_types" }
thiserror = "1.0.30"
strum = { version = "0.24", features = ["derive"] }
itertools = "0.10.3"
